Fix truncated line items on Line items table

--- a/src/invoice/invoice-table.scss
+++ b/src/invoice/invoice-table.scss
@@ -41,7 +41,7 @@
   }
 }
 
-.table {
+.invoiceTable {
   width: 100%;
   table-layout: fixed;
   border-collapse: collapse;
